examples/bookinfo/custom/bookinfo-gateway_custom.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-custom
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - bookinfo-bookinfo-gateway-custom-istio-system.${EXTERNAL_DOMAIN}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-custom
  namespace: bookinfo
spec:
  hosts:
  - bookinfo-bookinfo-gateway-custom-istio-system.${EXTERNAL_DOMAIN}
  gateways:
  - bookinfo-gateway-custom
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage-custom
        port:
          number: 9080
