examples/bookinfo/custom/ocp-route-custom.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-bookinfo-gateway-custom
  namespace: istio-system
spec:
  host: bookinfo-bookinfo-gateway-custom-istio-system.${EXTERNAL_DOMAIN}
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
